[package]
name = "tjan_mcsr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", default-features = false, features = [
    "client",
    "http1",
] }
hyper-tls = { version = "0.5.0", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
tokio = { version = "1.27.0", default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }
twitch-irc = "5.0.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
